--- a/samples/XamarinForms/Droid/Resources/layout/ActivityCustomFragment.axml
+++ b/samples/XamarinForms/Droid/Resources/layout/ActivityCustomFragment.axml
@@ -6,29 +6,33 @@
     <FrameLayout
         android:id="@+id/fragmentContainer"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginBottom="@dimen/thumbnail_bar_height" />
+        android:layout_height="match_parent" />
+
     <com.pspdfkit.ui.PdfThumbnailBar
         android:id="@+id/thumbnailBar"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/thumbnail_bar_height"
+        android:layout_height="wrap_content"
         android:layout_gravity="bottom" />
+
     <com.pspdfkit.ui.search.PdfSearchViewModular
         android:id="@+id/modularSearchView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:elevation="8dp"
         android:visibility="visible" />
+
     <com.pspdfkit.ui.PdfThumbnailGrid
         android:id="@+id/thumbnailGrid"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:visibility="invisible" />
+
     <com.pspdfkit.ui.PdfOutlineView
         android:id="@+id/outlineView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:visibility="invisible" />
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -36,6 +40,7 @@
         android:splitMotionEvents="false"
         android:background="@color/pspdf__color"
         android:orientation="vertical">
+
         <ImageView
             android:id="@+id/openSearchButton"
             android:padding="12dp"
@@ -43,6 +48,7 @@
             android:layout_height="50dp"
             android:background="?android:attr/selectableItemBackground"
             android:src="@drawable/pspdf__ic_search" />
+
         <ImageView
             android:id="@+id/openOutlineButton"
             android:padding="12dp"
@@ -50,6 +56,7 @@
             android:layout_height="50dp"
             android:background="?android:attr/selectableItemBackground"
             android:src="@drawable/pspdf__ic_outline" />
+
         <ImageView
             android:id="@+id/openThumbnailGridButton"
             android:padding="12dp"
